Fix parens for ODE in text
Match the correct code!

--- a/PyDSTool/Tutorial/Tutorial_VdP.html
+++ b/PyDSTool/Tutorial/Tutorial_VdP.html
@@ -35,7 +35,7 @@
     <p class="math-type-block">
       \(
         \left\{ \begin{align*}
-         \frac{dx}{dt} &= (y-x^3 - x)/\epsilon, \\
+         \frac{dx}{dt} &= (y-(x^3 - x))/\epsilon, \\
 		   
 		\frac{dy}{dt} &= a - x \end{align*} \right.
 		\qquad
