--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -38,7 +38,7 @@
                         
 						<h3>Introduction to Modeling - NEUR 8790 (Fall 2011 and Fall 2013)</h3>
 
-					  <p>This <a href="http://www2.gsu.edu/~matrhc/NEUR8790.html">Topics In Neuroscience graduate class</a> is not a remedial math class for bioscientists. It is intended to lower the barrier for bio-science students to effectively communicate with mathematically-oriented researchers in the field. The course is based on discussions around journal articles and book chapters on "big picture" topics such as small world networks, evolutionary stable strategies, pattern formation, and others.</p>
+					  <p>This <a href="https://web.archive.org/web/20180305093452/http://www2.gsu.edu/~matrhc/NEUR8790.html">Topics In Neuroscience graduate class</a> is not a remedial math class for bioscientists. It is intended to lower the barrier for bio-science students to effectively communicate with mathematically-oriented researchers in the field. The course is based on discussions around journal articles and book chapters on "big picture" topics such as small world networks, evolutionary stable strategies, pattern formation, and others.</p>
 
 					  <h3>Calculus I - MATH 2211</h3>
 
