--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -50,7 +50,7 @@
 
 					  <p>Fall 2009. Details on this course can be found <a href="http://www2.gsu.edu/%7Ematrhc/math4610.html">here</a>.</p>
 
-					  <p>A useful tool in learning the underlying principles of computer arithmetic is this <a href="http://www2.gsu.edu/%7Ematrhc/binary.html">python module</a>, which simulates binary floating point representation to IEEE 754 standards of arbitrary fixed precision, or to infinite precision.</p>
+					  <p>A useful tool in learning the underlying principles of computer arithmetic is this <a href="https://github.com/robclewley/ieee754_simulation">python module</a>, which simulates binary floating point representation to IEEE 754 standards of arbitrary fixed precision, or to infinite precision.</p>
 
 					</div>
 				<!-- TemplateEndEditable -->
